# routes/routines.js
@@ -1,4 +1,7 @@
 const routes = require('express').Router();
+const validate = require('../middlewares/validation');
+const { validationResult } = require('express-validator');
+let errors;
 
 const workoutsController = require('../controllers/workouts');
 
@@ -6,7 +9,29 @@ routes.get('/', workoutsController.getAll);
 
 routes.get('/:type', workoutsController.getSingle);
 
-routes.post('/', workoutsController.addRoutine);
+routes.post('/', validate.workoutValidation,
+(req, res, next) => {
+    errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      console.log(errors.mapped());
+      console.log('errors');
+    } else {
+      next();
+    }
+  },workoutsController.addRoutine);
+
+routes.put('/:id',validate.workoutValidation,
+(req, res, next) => {
+    errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      console.log(errors.mapped());
+      console.log('errors');
+    } else {
+      next();
+    }
+  }, workoutsController.updateRoutine);
+
+routes.delete('/:id', workoutsController.deleteWorkout);
 
 module.exports = routes;
 
